# MyProject_Calculator

./: CMakeLists.txt  README.md  main.cpp
include/: arithmetic.h  calculator.h
src/: arithmetic.cpp  calculator.cpp
